Correcion tabla - añado los años

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "id": "93055a03-84ce-4fbb-bb68-26612fb727e4",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
     "        \n",
     "#Las columnas de años, mes, producto, provincia, visita pagina, gasto toal, y transacciones no nos interesan para responder a nuestra pregunta.`\n",
     "        \n",
-    "    columnas_a_borrar = [\"AÑO\", \"MES\", \"PRODUCTO\", \"PROVINCIA\", \"VISITAS_PAGINAS\", \"GASTO_TOTAL\", \"TRANSACCIONES\", \"CCAA\"]\n",
+    "    columnas_a_borrar = [\"MES\", \"PRODUCTO\", \"PROVINCIA\", \"VISITAS_PAGINAS\", \"GASTO_TOTAL\", \"TRANSACCIONES\", \"CCAA\"]\n",
     "    columnas =[col for col in columnas_a_borrar if col in df_AOD.columns]\n",
     "    df_AOD = df_AOD.drop(columns=columnas)\n",
     "    \n",
@@ -498,7 +498,7 @@
     "        print(\"Columna beneficios añadida\")\n",
     "\n",
     "    if \"CATEGORIA\" in df_AOD.columns and \"BENEFICIOS\" in df_AOD.columns:\n",
-    "        df_groupado = df_AOD.groupby(\"CATEGORIA\").agg({\n",
+    "        df_groupado = df_AOD.groupby([\"AÑO\",\"CATEGORIA\"]).agg({\n",
     "            \"ENTRADAS\": \"sum\",\n",
     "            \"PRECIO_MEDIO_ENTRADA\": \"mean\",\n",
     "            \"BENEFICIOS\": \"sum\"\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "id": "f6387a3d-8e74-4f5f-934a-b765c006f5a8",
    "metadata": {},
    "outputs": [
@@ -547,6 +547,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>AÑO</th>\n",
        "      <th>CATEGORIA</th>\n",
        "      <th>ENTRADAS</th>\n",
        "      <th>PRECIO_MEDIO_ENTRADA</th>\n",
@@ -555,110 +556,366 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>22</th>\n",
+       "      <td>2024</td>\n",
        "      <td>Música</td>\n",
-       "      <td>3367086</td>\n",
-       "      <td>16.782601</td>\n",
-       "      <td>5.227567e+07</td>\n",
+       "      <td>1707364</td>\n",
+       "      <td>16.338337</td>\n",
+       "      <td>2.675584e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Música</td>\n",
+       "      <td>871762</td>\n",
+       "      <td>17.529230</td>\n",
+       "      <td>1.297150e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Música</td>\n",
+       "      <td>787960</td>\n",
+       "      <td>16.865917</td>\n",
+       "      <td>1.254834e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>548996</td>\n",
+       "      <td>12.931045</td>\n",
+       "      <td>7.401212e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>282275</td>\n",
+       "      <td>13.440778</td>\n",
+       "      <td>4.212688e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Actividades infantiles</td>\n",
+       "      <td>250134</td>\n",
+       "      <td>14.687921</td>\n",
+       "      <td>3.131946e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Cultura, teatro y danza</td>\n",
-       "      <td>1075900</td>\n",
-       "      <td>12.924485</td>\n",
-       "      <td>1.440029e+07</td>\n",
+       "      <td>244629</td>\n",
+       "      <td>12.263704</td>\n",
+       "      <td>2.786385e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Actividades infantiles</td>\n",
-       "      <td>474683</td>\n",
-       "      <td>15.935920</td>\n",
-       "      <td>5.787711e+06</td>\n",
+       "      <td>115228</td>\n",
+       "      <td>17.405918</td>\n",
+       "      <td>1.389127e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Actividades infantiles</td>\n",
+       "      <td>109321</td>\n",
+       "      <td>17.169012</td>\n",
+       "      <td>1.266638e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Musicales</td>\n",
+       "      <td>90411</td>\n",
+       "      <td>12.011725</td>\n",
+       "      <td>1.092596e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Deportes y aventuras</td>\n",
+       "      <td>59559</td>\n",
+       "      <td>18.784769</td>\n",
+       "      <td>9.794171e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Cursos</td>\n",
+       "      <td>16169</td>\n",
+       "      <td>54.174471</td>\n",
+       "      <td>9.714932e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Musicales</td>\n",
+       "      <td>47768</td>\n",
+       "      <td>11.692641</td>\n",
+       "      <td>5.494403e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Musicales</td>\n",
-       "      <td>179962</td>\n",
-       "      <td>12.161537</td>\n",
-       "      <td>2.190787e+06</td>\n",
+       "      <td>41783</td>\n",
+       "      <td>13.028794</td>\n",
+       "      <td>5.487502e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Cursos</td>\n",
+       "      <td>11041</td>\n",
+       "      <td>40.249538</td>\n",
+       "      <td>5.153480e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Gastronomía</td>\n",
+       "      <td>23887</td>\n",
+       "      <td>19.211275</td>\n",
+       "      <td>5.133021e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Deportes y aventuras</td>\n",
+       "      <td>24398</td>\n",
+       "      <td>22.775516</td>\n",
+       "      <td>3.809948e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Deportes y aventuras</td>\n",
-       "      <td>107699</td>\n",
-       "      <td>20.819769</td>\n",
-       "      <td>1.738148e+06</td>\n",
+       "      <td>23742</td>\n",
+       "      <td>22.960160</td>\n",
+       "      <td>3.777356e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Conferencias</td>\n",
+       "      <td>18483</td>\n",
+       "      <td>43.782086</td>\n",
+       "      <td>3.249632e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Gastronomía</td>\n",
+       "      <td>13160</td>\n",
+       "      <td>17.337762</td>\n",
+       "      <td>2.586911e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Cursos</td>\n",
-       "      <td>32016</td>\n",
-       "      <td>49.972518</td>\n",
-       "      <td>1.711985e+06</td>\n",
+       "      <td>4806</td>\n",
+       "      <td>53.033939</td>\n",
+       "      <td>2.251439e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Cine</td>\n",
+       "      <td>23017</td>\n",
+       "      <td>8.223773</td>\n",
+       "      <td>2.153669e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Gastronomía</td>\n",
-       "      <td>48599</td>\n",
-       "      <td>20.678214</td>\n",
-       "      <td>9.679946e+05</td>\n",
+       "      <td>11552</td>\n",
+       "      <td>28.365882</td>\n",
+       "      <td>1.960013e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>26</th>\n",
+       "      <td>2025</td>\n",
        "      <td>Conferencias</td>\n",
-       "      <td>25797</td>\n",
-       "      <td>43.820923</td>\n",
-       "      <td>5.830860e+05</td>\n",
+       "      <td>4691</td>\n",
+       "      <td>40.427143</td>\n",
+       "      <td>1.773669e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>20</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Museo y exposiciones</td>\n",
+       "      <td>23834</td>\n",
+       "      <td>11.840074</td>\n",
+       "      <td>1.768444e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2025</td>\n",
        "      <td>Cine</td>\n",
-       "      <td>44324</td>\n",
-       "      <td>7.766204</td>\n",
-       "      <td>3.692110e+05</td>\n",
+       "      <td>12248</td>\n",
+       "      <td>7.642276</td>\n",
+       "      <td>1.011795e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Museo y exposiciones</td>\n",
-       "      <td>46006</td>\n",
-       "      <td>10.848237</td>\n",
-       "      <td>3.465193e+05</td>\n",
+       "      <td>12677</td>\n",
+       "      <td>9.770870</td>\n",
+       "      <td>8.612665e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Museo y exposiciones</td>\n",
+       "      <td>9495</td>\n",
+       "      <td>10.043378</td>\n",
+       "      <td>8.354830e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Conferencias</td>\n",
+       "      <td>2623</td>\n",
+       "      <td>49.882727</td>\n",
+       "      <td>8.075592e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Ferias</td>\n",
+       "      <td>2236</td>\n",
+       "      <td>57.049667</td>\n",
+       "      <td>6.866803e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Ferias</td>\n",
+       "      <td>3262</td>\n",
+       "      <td>28.751778</td>\n",
+       "      <td>5.936398e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Ferias</td>\n",
-       "      <td>6794</td>\n",
-       "      <td>47.476882</td>\n",
-       "      <td>1.856093e+05</td>\n",
+       "      <td>1296</td>\n",
+       "      <td>78.335000</td>\n",
+       "      <td>5.757725e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Cine</td>\n",
+       "      <td>9059</td>\n",
+       "      <td>6.904792</td>\n",
+       "      <td>5.266451e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Parques temáticos</td>\n",
+       "      <td>1107</td>\n",
+       "      <td>14.646000</td>\n",
+       "      <td>1.246311e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>2023</td>\n",
        "      <td>Parques temáticos</td>\n",
-       "      <td>1745</td>\n",
-       "      <td>20.264545</td>\n",
-       "      <td>1.663865e+04</td>\n",
+       "      <td>638</td>\n",
+       "      <td>24.946667</td>\n",
+       "      <td>4.175540e+03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  CATEGORIA  ENTRADAS  PRECIO_MEDIO_ENTRADA    BENEFICIOS\n",
-       "10                   Música   3367086             16.782601  5.227567e+07\n",
-       "3   Cultura, teatro y danza   1075900             12.924485  1.440029e+07\n",
-       "0    Actividades infantiles    474683             15.935920  5.787711e+06\n",
-       "9                 Musicales    179962             12.161537  2.190787e+06\n",
-       "5      Deportes y aventuras    107699             20.819769  1.738148e+06\n",
-       "4                    Cursos     32016             49.972518  1.711985e+06\n",
-       "7               Gastronomía     48599             20.678214  9.679946e+05\n",
-       "2              Conferencias     25797             43.820923  5.830860e+05\n",
-       "1                      Cine     44324              7.766204  3.692110e+05\n",
-       "8      Museo y exposiciones     46006             10.848237  3.465193e+05\n",
-       "6                    Ferias      6794             47.476882  1.856093e+05\n",
-       "11        Parques temáticos      1745             20.264545  1.663865e+04"
+       "     AÑO                CATEGORIA  ENTRADAS  PRECIO_MEDIO_ENTRADA  \\\n",
+       "22  2024                   Música   1707364             16.338337   \n",
+       "34  2025                   Música    871762             17.529230   \n",
+       "10  2023                   Música    787960             16.865917   \n",
+       "15  2024  Cultura, teatro y danza    548996             12.931045   \n",
+       "27  2025  Cultura, teatro y danza    282275             13.440778   \n",
+       "12  2024   Actividades infantiles    250134             14.687921   \n",
+       "3   2023  Cultura, teatro y danza    244629             12.263704   \n",
+       "0   2023   Actividades infantiles    115228             17.405918   \n",
+       "24  2025   Actividades infantiles    109321             17.169012   \n",
+       "21  2024                Musicales     90411             12.011725   \n",
+       "17  2024     Deportes y aventuras     59559             18.784769   \n",
+       "16  2024                   Cursos     16169             54.174471   \n",
+       "33  2025                Musicales     47768             11.692641   \n",
+       "9   2023                Musicales     41783             13.028794   \n",
+       "28  2025                   Cursos     11041             40.249538   \n",
+       "19  2024              Gastronomía     23887             19.211275   \n",
+       "29  2025     Deportes y aventuras     24398             22.775516   \n",
+       "5   2023     Deportes y aventuras     23742             22.960160   \n",
+       "14  2024             Conferencias     18483             43.782086   \n",
+       "31  2025              Gastronomía     13160             17.337762   \n",
+       "4   2023                   Cursos      4806             53.033939   \n",
+       "13  2024                     Cine     23017              8.223773   \n",
+       "7   2023              Gastronomía     11552             28.365882   \n",
+       "26  2025             Conferencias      4691             40.427143   \n",
+       "20  2024     Museo y exposiciones     23834             11.840074   \n",
+       "25  2025                     Cine     12248              7.642276   \n",
+       "8   2023     Museo y exposiciones     12677              9.770870   \n",
+       "32  2025     Museo y exposiciones      9495             10.043378   \n",
+       "2   2023             Conferencias      2623             49.882727   \n",
+       "30  2025                   Ferias      2236             57.049667   \n",
+       "18  2024                   Ferias      3262             28.751778   \n",
+       "6   2023                   Ferias      1296             78.335000   \n",
+       "1   2023                     Cine      9059              6.904792   \n",
+       "23  2024        Parques temáticos      1107             14.646000   \n",
+       "11  2023        Parques temáticos       638             24.946667   \n",
+       "\n",
+       "      BENEFICIOS  \n",
+       "22  2.675584e+07  \n",
+       "34  1.297150e+07  \n",
+       "10  1.254834e+07  \n",
+       "15  7.401212e+06  \n",
+       "27  4.212688e+06  \n",
+       "12  3.131946e+06  \n",
+       "3   2.786385e+06  \n",
+       "0   1.389127e+06  \n",
+       "24  1.266638e+06  \n",
+       "21  1.092596e+06  \n",
+       "17  9.794171e+05  \n",
+       "16  9.714932e+05  \n",
+       "33  5.494403e+05  \n",
+       "9   5.487502e+05  \n",
+       "28  5.153480e+05  \n",
+       "19  5.133021e+05  \n",
+       "29  3.809948e+05  \n",
+       "5   3.777356e+05  \n",
+       "14  3.249632e+05  \n",
+       "31  2.586911e+05  \n",
+       "4   2.251439e+05  \n",
+       "13  2.153669e+05  \n",
+       "7   1.960013e+05  \n",
+       "26  1.773669e+05  \n",
+       "20  1.768444e+05  \n",
+       "25  1.011795e+05  \n",
+       "8   8.612665e+04  \n",
+       "32  8.354830e+04  \n",
+       "2   8.075592e+04  \n",
+       "30  6.866803e+04  \n",
+       "18  5.936398e+04  \n",
+       "6   5.757725e+04  \n",
+       "1   5.266451e+04  \n",
+       "23  1.246311e+04  \n",
+       "11  4.175540e+03  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
