Added new endopoint: Atracciones turisticas

--- a/01_Extraction.ipynb
+++ b/01_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "474a2cd8-939d-4de9-9ee0-a58816fb6ffa",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "id": "b487842e-19f6-49a5-a207-3216ffebdf02",
    "metadata": {},
    "outputs": [],
@@ -37,19 +37,15 @@
     "    \"FRONTUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/FRONTUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&Tipo%20de%20visitante=Todos&CCAA%20de%20destino=Todos\",\n",
     "    \"EGATUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EGATUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&CCAA%20de%20destino=Todos\",\n",
     "    \"ACTIVIDADES_OCIO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ACTIVIDADES_OCIO_DL?CCAA=Todos&Provincia=Todos\",\n",
-    "    \"TRANSPORTE_TERRESTRE_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/TRANSPORTE_TERRESTRE_DL?desde%20%28a%C3%B1o%29=2018&Tipo%20transporte=Todos\",\n",
     "    \"CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL?Pa%C3%ADs%20origen=Todos&Ciudad%20destino=Todos&Tipo%20origen=Todos\",\n",
-    "    \"ESCUCHA_ACTIVA_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ESCUCHA_ACTIVA_DL?Idioma=Todos&Medio=Todos&Sentimiento=Todos\",\n",
     "    \"CST_GASTO_CONSUMO_TURISTICO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/CST_GASTO_CONSUMO_TURISTICO_DL?Producto=Todos\",\n",
-    "    \"EOAC_CATEGORIA_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EOAC_CATEGORIA_DL?desde%20%28a%C3%B1o%29=2018&Categor%C3%ADa=Todos&Lugar%20de%20residencia=Todos\",\n",
-    "    \"EOAL_PAIS_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EOAL_PAIS_DL?Pa%C3%ADs=Todos&Lugar%20de%20residencia=Todos\",\n",
-    "    \"EOTR_PAIS_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EOTR_PAIS_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs=Todos&Lugar%20de%20residencia=Todos\"\n",
+    "    \"ATRACCIONES_RECURSOS_TURISTICOS_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ATRACCIONES_RECURSOS_TURISTICOS_DL?CCAA=Todos&Provincia=Todos\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "4e802ea6-ba2c-469d-aeb0-87d56fb515f7",
    "metadata": {},
    "outputs": [],
@@ -87,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "8df69d2b-82a4-45f3-8630-9031905621d5",
    "metadata": {},
    "outputs": [
@@ -98,13 +94,9 @@
       "- FRONTUR_DL.xlsx already exists.\n",
       "- EGATUR_DL.xlsx already exists.\n",
       "- ACTIVIDADES_OCIO_DL.xlsx already exists.\n",
-      "- TRANSPORTE_TERRESTRE_DL.xlsx already exists.\n",
       "- CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL.xlsx already exists.\n",
-      "- ESCUCHA_ACTIVA_DL.xlsx already exists.\n",
       "- CST_GASTO_CONSUMO_TURISTICO_DL.xlsx already exists.\n",
-      "- EOAC_CATEGORIA_DL.xlsx already exists.\n",
-      "- EOAL_PAIS_DL.xlsx already exists.\n",
-      "- EOTR_PAIS_DL.xlsx already exists.\n"
+      "ATRACCIONES_RECURSOS_TURISTICOS_DL.csv downloaded and saved.\n"
      ]
     }
    ],
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "5ac71938-0b9c-4adb-afba-7fd4465dc0c5",
    "metadata": {},
    "outputs": [
@@ -139,17 +131,14 @@
       " ACTIVIDADES_OCIO_DL\n",
       "Columns: ['AÑO', 'MES', 'PRODUCTO', 'CATEGORIA', 'CCAA', 'PROVINCIA', 'ENTRADAS', 'VISITAS_PAGINAS', 'GASTO_TOTAL', 'PRECIO_MEDIO_ENTRADA', 'TRANSACCIONES']\n",
       "\n",
-      " TRANSPORTE_TERRESTRE_DL\n",
-      "Columns: ['AÑO', 'MES', 'TIPO_TRANSPORTE', 'VIAJEROS']\n",
-      "\n",
       " CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL\n",
       "Columns: ['Unnamed: 0', 'AÑO', 'MES', 'PAIS_ORIGEN', 'CIUDAD_DESTINO', 'TIPO_ORIGEN', 'BUSQUEDAS', 'ANTELACION', 'ESTANCIA_MEDIA', 'VARIACION_INTERANUAL_BUSQUEDAS']\n",
       "\n",
-      " ESCUCHA_ACTIVA_DL\n",
-      "Columns: ['Unnamed: 0', 'AÑO', 'MES', 'MENCIONES']\n",
-      "\n",
       " CST_GASTO_CONSUMO_TURISTICO_DL\n",
-      "Columns: ['Unnamed: 0', 'AÑO', 'PRODUCTO', 'NUM_GASTO_INTERIOR', 'NUM_GASTO_INTERNO', 'NUM_GASTO_EMISOR', 'NUM_CONSUMO_TURISTICO_INTERIOR', 'NUM_CONSUMO_OTROS_COMPONENTES_TURISTICOS', 'NUM_GASTO_RECEPTOR']\n"
+      "Columns: ['Unnamed: 0', 'AÑO', 'PRODUCTO', 'NUM_GASTO_INTERIOR', 'NUM_GASTO_INTERNO', 'NUM_GASTO_EMISOR', 'NUM_CONSUMO_TURISTICO_INTERIOR', 'NUM_CONSUMO_OTROS_COMPONENTES_TURISTICOS', 'NUM_GASTO_RECEPTOR']\n",
+      "\n",
+      " ATRACCIONES_RECURSOS_TURISTICOS_DL\n",
+      "Columns: ['CATEGORIA', 'CCAA', 'PROVINCIA', 'VALORACION_POR_CATEGORIA', 'TOTAL_OPINIONES_CATEGORIA', 'VALORACION_GENERAL']\n"
      ]
     }
    ],
