--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -1233,45 +1233,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "d0803079-653c-4b7d-987f-4da682b42db9",
+   "execution_count": 138,
+   "id": "eefc91fe-2eef-4111-93c9-79d0c091628c",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AÑO</th>\n",
+       "      <th>MES</th>\n",
+       "      <th>PRODUCTO</th>\n",
+       "      <th>CATEGORIA</th>\n",
+       "      <th>CCAA</th>\n",
+       "      <th>PROVINCIA</th>\n",
+       "      <th>ENTRADAS</th>\n",
+       "      <th>VISITAS_PAGINAS</th>\n",
+       "      <th>GASTO_TOTAL</th>\n",
+       "      <th>PRECIO_MEDIO_ENTRADA</th>\n",
+       "      <th>TRANSACCIONES</th>\n",
+       "      <th>TIPO_CCAA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>35</td>\n",
+       "      <td>135</td>\n",
+       "      <td>420.0000</td>\n",
+       "      <td>12.0000</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Emergente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6.4600</td>\n",
+       "      <td>3.2300</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Emergente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Música</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>310</td>\n",
+       "      <td>4171</td>\n",
+       "      <td>3357.3000</td>\n",
+       "      <td>10.8300</td>\n",
+       "      <td>153</td>\n",
+       "      <td>Emergente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Actividades</td>\n",
+       "      <td>Actividades infantiles</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>39</td>\n",
+       "      <td>151</td>\n",
+       "      <td>207.8700</td>\n",
+       "      <td>5.3300</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Emergente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>290</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2726.0000</td>\n",
+       "      <td>9.4000</td>\n",
+       "      <td>124</td>\n",
+       "      <td>Emergente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17207</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Actividades</td>\n",
+       "      <td>Deportes y aventuras</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>3505</td>\n",
+       "      <td>10282</td>\n",
+       "      <td>99371.3065</td>\n",
+       "      <td>28.3513</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17208</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Actividades</td>\n",
+       "      <td>Actividades infantiles</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>10184</td>\n",
+       "      <td>28670</td>\n",
+       "      <td>189904.1032</td>\n",
+       "      <td>18.6473</td>\n",
+       "      <td>3980</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17209</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>38317</td>\n",
+       "      <td>103158</td>\n",
+       "      <td>550569.3096</td>\n",
+       "      <td>14.3688</td>\n",
+       "      <td>17599</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17210</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Museo y exposiciones</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>1086</td>\n",
+       "      <td>3291</td>\n",
+       "      <td>13221.1812</td>\n",
+       "      <td>12.1742</td>\n",
+       "      <td>324</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17211</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Actividades</td>\n",
+       "      <td>Gastronomía</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>Total Nacional</td>\n",
+       "      <td>2939</td>\n",
+       "      <td>7496</td>\n",
+       "      <td>53474.5172</td>\n",
+       "      <td>18.1948</td>\n",
+       "      <td>1375</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17212 rows × 12 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Cultura, teatro y danza',\n",
-       " 'Música',\n",
-       " 'Actividades infantiles',\n",
-       " 'Museo y exposiciones',\n",
-       " 'Cursos',\n",
-       " 'Gastronomía',\n",
-       " 'Musicales',\n",
-       " 'Deportes y aventuras',\n",
-       " 'Cine',\n",
-       " 'Conferencias',\n",
-       " 'Parques temáticos',\n",
-       " 'Ferias']"
+       "        AÑO  MES      PRODUCTO                CATEGORIA            CCAA  \\\n",
+       "0      2023    7  Espectaculos  Cultura, teatro y danza      País Vasco   \n",
+       "1      2023    7  Espectaculos  Cultura, teatro y danza      País Vasco   \n",
+       "2      2023    7  Espectaculos                   Música      País Vasco   \n",
+       "3      2023    7   Actividades   Actividades infantiles      País Vasco   \n",
+       "4      2023    7  Espectaculos  Cultura, teatro y danza      País Vasco   \n",
+       "...     ...  ...           ...                      ...             ...   \n",
+       "17207  2025    6   Actividades     Deportes y aventuras  Total Nacional   \n",
+       "17208  2025    6   Actividades   Actividades infantiles  Total Nacional   \n",
+       "17209  2025    6  Espectaculos  Cultura, teatro y danza  Total Nacional   \n",
+       "17210  2025    6  Espectaculos     Museo y exposiciones  Total Nacional   \n",
+       "17211  2025    6   Actividades              Gastronomía  Total Nacional   \n",
+       "\n",
+       "            PROVINCIA  ENTRADAS  VISITAS_PAGINAS  GASTO_TOTAL  \\\n",
+       "0         Araba/Álava        35              135     420.0000   \n",
+       "1         Araba/Álava         2                8       6.4600   \n",
+       "2         Araba/Álava       310             4171    3357.3000   \n",
+       "3         Araba/Álava        39              151     207.8700   \n",
+       "4         Araba/Álava       290             1123    2726.0000   \n",
+       "...               ...       ...              ...          ...   \n",
+       "17207  Total Nacional      3505            10282   99371.3065   \n",
+       "17208  Total Nacional     10184            28670  189904.1032   \n",
+       "17209  Total Nacional     38317           103158  550569.3096   \n",
+       "17210  Total Nacional      1086             3291   13221.1812   \n",
+       "17211  Total Nacional      2939             7496   53474.5172   \n",
+       "\n",
+       "       PRECIO_MEDIO_ENTRADA  TRANSACCIONES  TIPO_CCAA  \n",
+       "0                   12.0000             12  Emergente  \n",
+       "1                    3.2300              1  Emergente  \n",
+       "2                   10.8300            153  Emergente  \n",
+       "3                    5.3300             17  Emergente  \n",
+       "4                    9.4000            124  Emergente  \n",
+       "...                     ...            ...        ...  \n",
+       "17207               28.3513           2250       Otra  \n",
+       "17208               18.6473           3980       Otra  \n",
+       "17209               14.3688          17599       Otra  \n",
+       "17210               12.1742            324       Otra  \n",
+       "17211               18.1948           1375       Otra  \n",
+       "\n",
+       "[17212 rows x 12 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datasets[\"ACTIVIDADES_OCIO_DL\"][\"CATEGORIA\"].unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "id": "eefc91fe-2eef-4111-93c9-79d0c091628c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "actividades_ocio = datasets[\"ACTIVIDADES_OCIO_DL\"]\n",
-    "actividades_ocio.to_csv(\"./exports/actividades_ocio\")"
+    "actividades_ocio[\"TIPO_CCAA\"] = actividades_ocio[\"CCAA\"].apply(clasificar_ccaa)\n",
+    "\n",
+    "actividades_ocio.to_csv(\"./exports/actividades_ocio\")\n",
+    "\n",
+    "actividades_ocio"
    ]
   },
   {
